# BF3_CI

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
bf3_ci/: __init__.py
bf3_ci/devices/: bf3_device.py  bmc_device.py  host_device.py  rshim_device.py
bf3_ci/lib/: health_check.py
bf3_ci/plugins/: pytest_bf3_recovery.py  pytest_bf3_report.py
bf3_ci/transport/: redfish.py  ssh.py
config/: testbed.sample.yaml
tests/: conftest.py
tests/bfb/: test_bfb_install.py
tests/bmc/: conftest.py  test_bmc_firmware.py  test_bmc_power.py  test_bmc_rshim.py
tests/functional/: test_bootctl.py  test_doca.py  test_drivers.py  test_eeprom.py  test_emmc.py  test_gpio.py  test_memtest.py  test_network.py  test_pci.py  test_rshim.py  test_storage.py  test_write_device.py
tests/preflight/: test_preflight.py
tests/stress/: conftest.py  test_reboot_stress.py  test_rshim_stress.py
tests/uefi/: test_uefi_capsule.py
